[gd_scene load_steps=11 format=2]

[ext_resource path="res://enemies/warden/sprites/sprite.png" type="Texture" id=1]
[ext_resource path="res://fonts/MEPHISTO.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://enemies/warden/Warden.gd" type="Script" id=8]
[ext_resource path="res://txtrs/Heart/Power Hurt_1.png" type="Texture" id=10]

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 160, 160 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 16.0
height = 96.0

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 24, 24 )

[sub_resource type="Animation" id=5]
resource_name = "hurt"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.866667, 0.113725, 0.113725, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Warden" type="KinematicBody2D" groups=["enemy"]]
collision_layer = 2
collision_mask = 0
script = ExtResource( 8 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.8, 0.8 )
frames = SubResource( 1 )
animation = "idle"
playing = true
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = -64.0
margin_top = -128.0
margin_right = 64.0
margin_bottom = -103.0
custom_fonts/font = SubResource( 3 )
text = "Warden"
align = 1

[node name="turnCD" type="Timer" parent="."]
wait_time = 0.6

[node name="memoryTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="stun" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="attackCD" type="Timer" parent="."]

[node name="hitArea" type="Area2D" parent="."]
position = Vector2( 16, -16 )
collision_layer = 0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitArea"]
shape = SubResource( 4 )

[node name="vision_forGroundBelow" type="RayCast2D" parent="."]
position = Vector2( 32, 0 )
enabled = true
cast_to = Vector2( 0, 120 )

[node name="vision_forPlayer" type="RayCast2D" parent="."]
position = Vector2( 0, -48 )
enabled = true
cast_to = Vector2( 64, 0 )

[node name="scaler" type="Node2D" parent="."]
scale = Vector2( 0.2, 0.2 )

[node name="healthbar" type="TextureProgress" parent="scaler"]
margin_left = -80.0
margin_top = -480.0
margin_right = 80.0
margin_bottom = -320.0
max_value = 10.0
value = 10.0
texture_under = ExtResource( 10 )
texture_progress = ExtResource( 10 )
tint_under = Color( 0, 0, 0, 1 )
tint_progress = Color( 0, 1, 0.741176, 1 )

[node name="VFX" type="AnimationPlayer" parent="."]
anims/hurt = SubResource( 5 )

[connection signal="timeout" from="turnCD" to="." method="_on_turnCD_timeout"]
[connection signal="timeout" from="memoryTimer" to="." method="_on_memoryTimer_timeout"]
[connection signal="timeout" from="stun" to="." method="_on_stun_timeout"]
[connection signal="timeout" from="attackCD" to="." method="_on_attackCD_timeout"]
[connection signal="body_entered" from="hitArea" to="." method="_on_hitArea_body_entered"]
